--- a/FieldGps/res/layout/activity_location.xml
+++ b/FieldGps/res/layout/activity_location.xml
@@ -96,8 +96,9 @@
         android:id="@+id/speed_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@id/accuracy_textview"
+        android:layout_marginRight="50dp"
         android:text="---"
         android:textColor="#666"
         android:textSize="20sp"
